--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="content">
             <h1>cars <span>electric.</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus assumenda, vel inventore consequatur debitis, mollitia animi atque numquam fugit aut quaerat? Illo, quod accusantium excepturi soluta unde modi quasi officiis.<p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus assumenda, vel inventore consequatur debitis,animi atque numquam fugit aut quaerat? Illo, quod accusantium excepturi soluta unde modi quasi officiis.<p>
             <a href="#">Read MOre..</a>
         </div>
         <div class="content">
