--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="content">
             <h1>cars<span>Elecrtic.</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quas repellendus velit perferendis, consequatur iusto fuga, incidunt esse explicabo nemo magnam, modi eligendi voluptatum obcaecati iure quae aliquam sunt at.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quas repellendus velit perferendis, consequatur iusto fuga, incidunt esse explicabo nemo magnam, modi eligendi voluptatum obcaecati quae aliquam sunt at.
             </p>
             <a href="#">Read MOre..</a>
         </div>
