--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <video class="video-slide" src="https://media.istockphoto.com/id/1255855271/video/charging-a-car-at-charging-station-at-dusk.mp4?s=mp4-640x640-is&k=20&c=vEOpD2uiykJWymvFz6AEZ4F0OdJ6zHXzFsQXLBU2Fn0=" autoplay muted loop></video>
         <div class="content active">
             <h1>CARS <span>Elecrtic</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, suscipit necessitatibus fugiat earum ipsa, veniam, placeat ullam cum similique quidem recusandae ab esse ut rem officiis nobis eveniet laboriosam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, suscipit necessitatibus fugiat earum ipsa, veniam, placeat ullam cum similique quidem  ab esse ut rem officiis nobis eveniet laboriosam!</p>
             <a href="#">Read MOre..</a>
         </div>
         <div class="content">
